Refactor email handling to use environment variable for sender and recipient

--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -29,4 +29,5 @@ jobs:
       env:
         news_api_key: ${{ secrets.news_api_key }}
         password: ${{ secrets.password }}
+        email: ${{ secrets.email }}
       run: python Main.py
