--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -7,7 +7,7 @@ on:
       - main
       - master
   schedule:
-    - cron: '0 8 * * 1 - 5' # Every day at 8 AM UTC
+    - cron: '0 8 * * 1-5' # Every day at 8 AM UTC
 
 jobs:
   send-email:
